2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	Fix for #439181.
	
	* data/banter.schemas.in, Banter/Preferences.cs: Don't use a
	  placeholder for saved windows.
	* Banter/Application.cs: Deal with there being no saved group windows.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/banter.in: Reverted back to r62 to fix the libdir variable.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* data/banter.schemas.in, Banter/Preferences.cs: Use the proper
	  defaults for ContactStyles.
	* data/Themes/ListStyles, data/Themes/ListStyles/basic-black.tar.gz,
	  data/Themes/ListStyles/basic.tar.gz, data/Themes/ContactStyles,
	  data/Themes/ContactStyles/basic-black.tar.gz,
	  data/Themes/ContactStyles/basic.tar.gz, data/Themes/Makefile.am:
	  Renamed ListStyles -> ContactStyles.
	* Banter/ContactStyleInfo.cs: Implemented this class so ThemeManager
	  will work.
	* Banter/ContactStyle.cs: Use ContactStyleInfo.
	* Banter/MessageStyleInfo.cs: Modified this so it knows whether it's a
	  system style or not.  This prevents duplicate styles.
	* Banter/ThemeManager.cs: Set up ContactStyles correctly.
	* Banter/PersonCard.cs: Use ThemeManager.ContactStyle.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* Banter/ThemeManager.cs: Added code to update the valid_message_styles
	  gconf entry after they're all updated.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* Banter/MessageStyleInfo.cs: Added a debug msg. so we can tell when
	  MessageStyleInfo.IsValid is called.
	* Banter/ThemeManager.cs: Fixed userThemePath.  Also implemented
	  UpdateMessageStyles in the UpdateThread.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Utilities.cs: Added CreateDirectoryIfNeeded ().
	* Banter/ThemeManager.cs: Stubbed out starting the update thread and
	  also exposed the paths to the themes and styles.
	* Banter/MessageStyle.cs: Updated the reference to
	  ThemeManager.SystemThemesPath.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 
